fix: normalize by dropdown was clipping behind other gui elements

--- a/biosmoother/static/css/styles.css
+++ b/biosmoother/static/css/styles.css
@@ -212,6 +212,10 @@ button {
     white-space: nowrap;
 }
 
+.z_index_100 {
+    z-index: 100;
+}
+
 .tab-button-fill{
     width: 100%;
 }
